# salvo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES.md  LICENSE  PROJECT_SPEC.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
examples/: backfill_prices.sh  test_salvage.sh  update_prices.sh
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: BuildableItemsList.tsx  MaterialsList.tsx  SalvageInput.tsx
migrations/: 20241109000001_initial_schema.sql  20241109000002_seed_sample_data.sql  20241109000003_add_all_salvage_types.sql  20241109000003_add_more_salvage.sql  20241109000004_add_all_salvage_types.sql  20241109000004_add_common_loot.sql  20241109000005_add_missing_items.sql  20241110000001_add_afterburner.sql
scripts/: download_sde.sh  import_sde.py
src/: error.rs  lib.rs  main.rs
src/api/: market.rs  mod.rs  salvage.rs
src/db/: mod.rs  models.rs  queries.rs
src/services/: blueprint_matcher.rs  market_data.rs  material_calculator.rs  mod.rs
tests/: integration_test.rs
