[package]
name = "salvo-backend"
version = "0.1.0"
edition = "2021"
authors = ["Brian Merriam"]
description = "EVE Online Serpentis Salvage Industrial Planner - Backend API"
license = "MIT"
repository = "https://github.com/yourusername/salvo"
keywords = ["eve-online", "salvage", "industry", "gaming", "api"]
categories = ["games", "web-programming"]

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# YAML parsing for SDE import
serde_yaml = "0.9"

[[bin]]
name = "import_sde"
path = "src/bin/import_sde.rs"
